# campus-monopoly

./: CampusMonopoly_Improved_Rules.md  CampusMonopoly_UI_Asset_Plan.md  start1.bat  start2.bat
assets/: README.md  generate_icons.py
assets/board/: README.md  preview.html
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: games.py  rooms.py
backend/app/core/: config.py  errors.py  room_policy.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/domain/: rules.py  seeds.py
backend/app/schemas/: game.py
backend/app/services/: game_service.py
backend/docs/: api_contract.md  backend_design_rationale.md  development_log.md  frontend_function_analysis.md  frontend_logic_flow.md  自己的问题.md
backend/tests/: test_api_flow.py
front_end/: .env.development  .env.example  README.md  UNIAPP_CONSTRUCTION_PLAN.md  package-lock.json  package.json
front_end/src/: App.vue  env.d.ts  manifest.json  pages.json
front_end/src/api/: game.ts  http.ts
front_end/src/components/: BoardCenterPlayers.vue  BoardTile.vue  ComposedBoard.vue  OfflineBanner.vue  PlayerPieceMarker.vue  TurnRevealPanel.vue
front_end/src/composables/: useGamePlay.ts  useLargeScreen.ts  useRoomSession.ts  useTurnReveal.ts
front_end/src/config/: env.ts
front_end/src/pages/game/: board.vue
front_end/src/stores/: game.ts  network.ts  session.ts
front_end/src/types/: game.ts  room.ts
front_end/src/utils/: boardLayout.ts  deviceId.ts  gameLabels.ts  playerName.ts  playerNameDictionary.ts
(+2 files in other folders)
